# CPS1011-Assignment-Program

./: README.md
Task1/: CMakeLists.txt  task1.h  task1a.c  task1b.c  task1c.c
Task2/: CMakeLists.txt  sgets.c  sgets.h  stack.c  stack.h  stack_2.c  stack_2.h  task2a.c  task2b.c
